--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/presentationUI/build/
+/presentationUI/dist/
+/presentationUI/nbproject/private/
